--- a/src/app/flight-hours/list/list.component.html
+++ b/src/app/flight-hours/list/list.component.html
@@ -1,1 +1,7 @@
-<ngFor>
+<div class="row">
+<div class="column-xd-12">
+<a href="#" *ngFor="let flight of Flights" class="list-group-item clearfix">
+   <p> {{flight.aircraft}} --  {{flight.takeoffTime | date: 'd/m/y h:mm'}} -- {{flight.landingTime| date: 'd/m/y h:mm'}} -- {{flight.pilots}}</p>
+    </a>
+    </div>
+</div>
