Added basic Navbar layout

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,7 @@
-<p>nav-bar works!</p>
+<mat-toolbar color = "primary">
+    <span class = "menu-item">Dashboard</span>
+    <span class = "menu-item">Flight Log</span>
+    <span class = "menu-item">Aircraft</span>
+    <span class = "filler"></span>
+    <span>About</span>
+ </mat-toolbar>
