--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color = "primary">
-    <span class = "menu-item">Dashboard</span>
-    <span class = "menu-item">Flight Log</span>
-    <span class = "menu-item">Aircraft</span>
+    <a  routerLink="/dashboard" class = "menu-item"><span class = "menu-item">Dashboard</span></a>
+    <a  routerLink="/flightslist" class = "menu-item"><span class = "menu-item">Flight log</span></a>
+    <a  routerLink="/aircraftlist" class = "menu-item"><span class = "menu-item">Aircraft List</span></a>    
     <span class = "filler"></span>
-    <span>About</span>
+    <a  routerLink="/login" class = "menu-item"><span class = "menu-item">Login</span></a>
  </mat-toolbar>
