--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <header></header>
-<app-list></app-list>
+<div class="container">
+    <div class="row">
+      <div class="col-md-12">      
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
