--- a/src/app/dashboard/dashboard-element/dashboard-element.component.css
+++ b/src/app/dashboard/dashboard-element/dashboard-element.component.css
@@ -4,10 +4,15 @@
 
 .dashboard-card {
   position: absolute;
-  top: 15px;
+  top: 55px;
   left: 15px;
   right: 15px;
   bottom: 15px;
+}
+
+.dashboard-conent {
+  position: absolute;
+  top: 30%;
 }
 
 .more-button {
@@ -17,5 +22,5 @@
 }
 
 .dashboard-card-content {
-  text-align: center;
+  text-align: left;
 }
