--- a/src/app/dashboard/dashboard-element/dashboard-element.component.html
+++ b/src/app/dashboard/dashboard-element/dashboard-element.component.html
@@ -5,18 +5,11 @@
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
-            {{card.title}}
-            <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu" xPosition="before">
-              <button mat-menu-item>Expand</button>
-              <button mat-menu-item>Remove</button>
-            </mat-menu>
+            {{card.title}}          
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <div>Card Content Here</div>
+          <div class="dashboard-conent"><h2>{{card.content}}</h2></div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
