minor ui adjustment for login

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,5 +3,5 @@
     <a  routerLink="/flightslist" class = "menu-item"><span class = "menu-item">Flight log</span></a>
     <a  routerLink="/aircraftlist" class = "menu-item"><span class = "menu-item">Aircraft List</span></a>    
     <span class = "filler"></span>
-    <a  routerLink="/login" class = "menu-item"><span class = "menu-item">Login</span></a>
+    <a  routerLink="/login" class = "menu-item"><span class = "menu-item">Authenticate</span></a>
  </mat-toolbar>
