Changed List to be editable and to add new items

--- a/src/app/flight-hours/list/list.component.css
+++ b/src/app/flight-hours/list/list.component.css
@@ -6,3 +6,12 @@ a {
 a.flight:nth-of-type(3n) .row{
     background: lightgrey;
   }
+  .title {
+    padding: 10px;
+  }
+ .add-new-flight {
+    border-radius: 5px;
+    background-color: rgb(47, 47, 223);
+    color: white;
+    padding: 5px 10px;
+  }
